100% done with the landing pages, i'll fix the dark mode feature when we move to react

--- a/sms-dashboard/css/style.css
+++ b/sms-dashboard/css/style.css
@@ -6,6 +6,10 @@
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
+body {
+    background-color: #f8f9fa;
+}
+
 nav {
     height: auto;
     /* border: 1px solid black; */
@@ -82,11 +86,11 @@ nav {
 }
 
 .dash-content {
-    /*
-     border: 1px solid black; */
+    /* border: 1px solid blue; */
     width: 90%;
-    height: 500px;
+    height: auto;
     margin-top: -70px;
+    margin-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -268,6 +272,33 @@ nav {
     background-color: #fff;
     width: 60%;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.thread {
+    border: 1px solid red;
+    height: auto;
+    padding: 0;
+    /* width: 90%; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.thread-create,
+.thread-read {
+    border: 1px solid black;
+    height: 400px;
+    padding: 1em;
+    /* border-radius: 10px; */
+}
+
+.thread-create {
+    width: 40%;
+}
+
+.thread-read {
+    width: 60%;
 }
 
 @media screen and (max-width:480px) {
